# ib_insync_options

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  example_downloads_for_es_gc_cl.ipynb  pyproject.toml
.github/workflows/: ci.yml  pr-linting.yml
.trunk/: trunk.yaml
ib_insync_options/: __init__.py
ib_insync_options/etl/: db_ops.py  facets.py  helpers.py  ibkr_etl.py  instrument_multiplexer.py
ib_insync_options/utils/: date_utils.py  df_utils.py  dict_utils.py  formatting_utils.py  list_utils.py  networking.py  time_utils.py
tests/: __init__.py
tests/etl/: test_ibkr_etl.py
tests/utils/: test_date_utils.py  test_df_utils.py  test_formatting_utils.py
