[tool.poetry]
name = "ib_insync_options"
version = "0.0.1"
description = ""
authors = ["Weston Platter <westonplatter@gmail.com>"]
readme = "README.md"
packages = [{ include = "ib_insync_options" }]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "<2"
numpy = "<2"
loguru = "^0.7.2"
sqlalchemy = "^2.0.32"
ib-insync = "^0.9.86"
psycopg2-binary = "^2.9.9"
pydantic = "*"
pytz = "^2024.1"
scipy = "<1.14.0"
pandera = "<1"
loman = "<0.41"
tqdm = "*"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
