[project]
name = "ib_insync_options"
version = "0.1.0"
description = ""
authors = [{ name = "Weston Platter", email = "westonplatter@gmail.com" }]
requires-python = "~=3.9"
readme = "README.md"
dependencies = [
    "pandas<2",
    "numpy<2",
    "loguru>=0.7.2,<0.8",
    "sqlalchemy>=2.0.32,<3",
    "ib-insync>=0.9.86,<0.10",
    "psycopg2-binary>=2.9.9,<3",
    "pydantic",
    "pytz~=2024.1",
    "scipy<1.14.0",
    "pandera<1",
    "loman",
    "tqdm",
]

[dependency-groups]
test = ["pytest>=8.3.2,<9"]

[tool.uv]
default-groups = ["test"]

[tool.hatch.build.targets.sdist]
include = ["ib_insync_options"]

[tool.hatch.build.targets.wheel]
include = ["ib_insync_options"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
